--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,17 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "4Zb1VmdFf6eQtoKwC-08n",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="4Zb1VmdFf6eQtoKwC-08n"
+      domain="www.chatbase.co"
+      defer>
+      </script>
   </body>
 </html>
